--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="banner">
             <div id="title">
-                <img src="icon.png" alt="soup icon" style="width:100px;">
+                <img src="./resources/icon.png" alt="soup icon" style="width:100px;">
                 <h1>Soups.com</h1>
             </div>
         <div class="content">
@@ -24,10 +24,10 @@
 
         <div class="sm-icons">
             <p>Join our newsletter or follow us on</p>
-            <i><img src="facebook.svg"><a href="www.facebook.com"></a></i>
-            <i><img src="twitter.svg"><a href="www.twitter.com"></a></i>
-            <i><img src="instagram.svg"><a href="www.instagram.com"></a></i>
-            <i><img src="youtube.svg"><a href="www.youtube.com"></a></i>
+            <i><img src="./resources/facebook.svg"><a href="www.facebook.com"></a></i>
+            <i><img src="./resources/twitter.svg"><a href="www.twitter.com"></a></i>
+            <i><img src="./resources/instagram.svg"><a href="www.instagram.com"></a></i>
+            <i><img src="./resources/youtube.svg"><a href="www.youtube.com"></a></i>
         </div>
 
         <div class="footer">
