--- a/searchPage.html
+++ b/searchPage.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
     <header>
-        <img src="icon.png" alt="soup icon" id="icon">
+        <img src="./resources/icon.png" alt="soup icon" id="icon">
         <h1>Soups.com</h1>
         <div id="searchBox">
             <form>
