--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="banner">
             <div id="title">
-                <img src="./resources/icon.png" alt="soup icon" style="width:100px;">
+                <img src="./resources/icon.png" alt="soup icon">
                 <h1>Soups.com</h1>
             </div>
         <div class="content">
