--- a/searchPage.html
+++ b/searchPage.html
@@ -11,11 +11,13 @@
 <body>
     <div class="container">
     <header>
-        <img src="./resources/icon.png" alt="soup icon" id="icon">
+        <div class="main">
+        <img src="./resources/icon.png" alt="soup icon">
         <h1>Soups.com</h1>
+        </div>
         <div id="searchBox">
             <form>
-                <input type="text" name=searchbox id="searchBox" placeholder="Search Recipe...">
+                <input type="text" name=searchbox id="searchBox">
                 <input type="button" id="searchBtn" value="Search Recipe" onclick="getData()">
                 <button class="back"><a href="index.html" class="back"> Go back</a></button>
             </form>
