--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="banner">
             <div id="title">
                 <img src="./resources/icon.png" alt="soup icon">
-                <h1>Soups.com</h1>
+                <h1>Recipe.com</h1>
             </div>
         <div class="content">
             <h1>Learn, explore and unleash your inner chef</h1>
