--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="content">
             <h1>Learn, explore and unleash your inner chef</h1>
             <p id="red">100 soup recipes just for you!</p>
-            <button type="button" id="myTab"><a href="searchPage.html">Click me</a></button>    
+            <button type="button" id="myTab"><a href="searchPage.html">Enter here</a></button>    
         </div>
         </div>
 
